Reduce Z-index of finance admin search suggestions Issue #94

--- a/client/src/pages/Admins/AdminFinance/SuggestionList/SuggestionList.scss
+++ b/client/src/pages/Admins/AdminFinance/SuggestionList/SuggestionList.scss
@@ -3,7 +3,7 @@
 
 .selector ul {
     position: absolute;
-    z-index: 500;
+    z-index: 8;
     width: fit-content;
     display: flex;
     flex-direction: column;
